# vsn_vod_transcription

./: .dockerignore  .env.example  .gitignore  AI_LOG.md  README.md  TECHNICAL_CHOICES.md  alembic.ini  docker-compose.yml  package.json  pyproject.toml
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
app/: config.py  logging.py  main.py  metrics.py
app/api/: errors.py  exports.py  health.py  jobs.py  metrics.py
app/auth/: deps.py  flash.py  logto_client.py  routes.py  session_store.py
app/db/: models.py  session.py
app/routes/: dashboard.py  job_detail.py  submissions.py
app/services/: exports.py  failures.py  jobs_service.py  openai_whisper.py  storage_minio.py  submission_errors.py  submission_service.py  transcription.py
app/templates/: base.html  dashboard.html  job_detail.html  job_not_found.html  login.html  submission_error.html
docker/: Dockerfile.app  Dockerfile.worker  init-logto-db.sh
migrations/: env.py
migrations/versions/: 001_init.py
specs/001-vod-transcription-utility/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-vod-transcription-utility/checklists/: requirements.md
specs/001-vod-transcription-utility/contracts/: openapi.yaml
specs/002-dashboard-submission-ux/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-dashboard-submission-ux/checklists/: requirements.md
specs/002-dashboard-submission-ux/contracts/: openapi.yaml
tests/contract/: test_dashboard_submission_contract.py  test_openapi_schema_validation.py
tests/integration/: test_auth_guard.py  test_dashboard_happy_path.py  test_dashboard_submission_ssr.py  test_job_detail_404.py  test_submission_error_ssr.py
tests/unit/: test_exports.py  test_flash.py  test_logging_policy.py  test_submission_validation.py
worker/: celery_app.py  tasks.py
worker/media/: downloader.py  ffmpeg.py  ffprobe.py
