[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vsn-vod-transcription"
version = "0.1.0"
description = "VOD Transcription Utility"
requires-python = ">=3.13"

[tool.hatch.build.targets.wheel]
packages = ["app", "worker"]
dependencies = [
    "fastapi[standard]>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "jinja2>=3.1,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "alembic>=1.14,<2",
    "asyncpg>=0.30,<1",
    "celery[redis]>=5.4,<6",
    "redis>=5.2,<6",
    "minio>=7.2,<8",
    "openai>=1.60,<2",
    "httpx>=0.28,<1",
    "python-multipart>=0.0.20",
    "itsdangerous>=2.2,<3",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6,<7",
    "httpx>=0.28,<1",
    "openapi-spec-validator>=0.7,<1",
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
    "types-redis>=4,<5",
]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["app", "worker", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "S",     # flake8-bandit
    "T20",   # flake8-print
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = [
    "S104",  # binding to 0.0.0.0
    "S105",  # hardcoded password defaults (config defaults)
    "S603",  # subprocess calls
    "S607",  # partial path to executable
    "B008",  # Depends() in function defaults (FastAPI pattern)
    "RUF002", # ambiguous unicode (intentional)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
